[build-system]
requires = ["setuptools>=61.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "romer_minirobot"
version = "0.0.7"
authors = [
    { name="Salih Taşdelen", email="salih.tasdelen@hotmail.com"},
]
description = "API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rshell",
]

[project.urls]
"Homepage" = "https://github.com/SalihTasdelen/romer-minirobot"
"Bug Tracker" = "https://github.com/SalihTasdelen/romer-minirobot/issues"



[project.scripts]
minirobot = "romer_minirobot:main"

[project.optional-dependencies]
dev = [
    "pylint ~=2.14.0",
    "toml ~=0.10.2",
    "yapf ~=0.32.0",
]

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]

[tool.yapf]
blank_line_before_nested_class_or_def = true
column_limit = 88